--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -691,56 +691,58 @@
                         <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="hT0-9E-Cfm">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="hT0-9E-Cfm">
                                 <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </mapView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="statusBar" translatesAutoresizingMaskIntoConstraints="NO" id="dDC-Hq-9HZ">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="statusBar" translatesAutoresizingMaskIntoConstraints="NO" id="dDC-Hq-9HZ">
                                 <rect key="frame" x="73" y="22" width="472" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="478" id="hTB-gn-m6J"/>
-                                    <constraint firstAttribute="height" constant="45" id="t9K-Nu-24i"/>
-                                </constraints>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="91t-QI-bo7">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="91t-QI-bo7">
                                 <rect key="frame" x="268" y="32" width="93" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="93" id="dTa-e0-9v6"/>
+                                    <constraint firstAttribute="width" constant="93" id="L96-ob-re6"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JmX-7R-HAO">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JmX-7R-HAO">
                                 <rect key="frame" x="112" y="32" width="110" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Imf-Ey-SB3">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Imf-Ey-SB3">
                                 <rect key="frame" x="385" y="32" width="89" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="89" id="IK6-Ml-ZQP"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xWR-yM-mDc">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xWR-yM-mDc">
                                 <rect key="frame" x="487" y="20" width="61" height="52"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="61" id="sQu-Qi-7m4"/>
+                                    <constraint firstAttribute="width" constant="61" id="WCa-bi-ri6"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" image="detailButton">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8m5-U6-aYN">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8m5-U6-aYN">
                                 <rect key="frame" x="20" y="20" width="51" height="49"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="51" id="e4P-xO-1VF"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <state key="normal" title="Back">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -752,26 +754,31 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="xWR-yM-mDc" firstAttribute="top" secondItem="jRo-Js-xDR" secondAttribute="top" constant="20" symbolic="YES" id="0Nn-SK-udl"/>
-                            <constraint firstItem="dDC-Hq-9HZ" firstAttribute="top" secondItem="xWR-yM-mDc" secondAttribute="bottom" constant="-50" id="1Q1-5m-SAc"/>
-                            <constraint firstItem="8m5-U6-aYN" firstAttribute="leading" secondItem="jRo-Js-xDR" secondAttribute="leading" constant="20" symbolic="YES" id="1jG-wS-RjE"/>
-                            <constraint firstItem="JmX-7R-HAO" firstAttribute="top" secondItem="dDC-Hq-9HZ" secondAttribute="bottom" constant="-31" id="2m2-00-GFt"/>
-                            <constraint firstItem="91t-QI-bo7" firstAttribute="top" secondItem="dDC-Hq-9HZ" secondAttribute="bottom" constant="-31" id="IEM-HD-wR8"/>
-                            <constraint firstAttribute="trailing" secondItem="dDC-Hq-9HZ" secondAttribute="trailing" constant="23" id="KGu-uG-oWb"/>
-                            <constraint firstItem="xWR-yM-mDc" firstAttribute="leading" secondItem="Imf-Ey-SB3" secondAttribute="trailing" constant="13" id="LKk-Qf-x1Z"/>
-                            <constraint firstItem="dHc-uE-pLe" firstAttribute="top" secondItem="8m5-U6-aYN" secondAttribute="bottom" constant="251" id="OlB-1l-R9m"/>
-                            <constraint firstItem="xWR-yM-mDc" firstAttribute="top" secondItem="8m5-U6-aYN" secondAttribute="top" id="Sxn-ml-Wce"/>
-                            <constraint firstItem="91t-QI-bo7" firstAttribute="baseline" secondItem="8m5-U6-aYN" secondAttribute="baseline" id="U2j-Lk-Q8b"/>
-                            <constraint firstItem="91t-QI-bo7" firstAttribute="baseline" secondItem="JmX-7R-HAO" secondAttribute="baseline" id="U9g-F7-llm"/>
-                            <constraint firstItem="91t-QI-bo7" firstAttribute="centerY" secondItem="dDC-Hq-9HZ" secondAttribute="centerY" id="VNL-Cn-oOQ"/>
-                            <constraint firstItem="dDC-Hq-9HZ" firstAttribute="top" secondItem="jRo-Js-xDR" secondAttribute="top" constant="20" id="fdL-LI-p6a"/>
-                            <constraint firstAttribute="trailing" secondItem="xWR-yM-mDc" secondAttribute="trailing" constant="20" symbolic="YES" id="hHM-5E-mr3"/>
-                            <constraint firstItem="91t-QI-bo7" firstAttribute="baseline" secondItem="Imf-Ey-SB3" secondAttribute="baseline" id="mlK-0t-kAY"/>
-                            <constraint firstItem="Imf-Ey-SB3" firstAttribute="leading" secondItem="91t-QI-bo7" secondAttribute="trailing" constant="24" id="ons-VJ-OPT"/>
-                            <constraint firstItem="91t-QI-bo7" firstAttribute="leading" secondItem="JmX-7R-HAO" secondAttribute="trailing" constant="46" id="pre-QO-6MA"/>
-                            <constraint firstItem="Imf-Ey-SB3" firstAttribute="top" secondItem="dDC-Hq-9HZ" secondAttribute="bottom" constant="-31" id="tqy-Vh-pEm"/>
-                            <constraint firstItem="dDC-Hq-9HZ" firstAttribute="leading" secondItem="8m5-U6-aYN" secondAttribute="trailing" constant="2" id="uSI-af-rd9"/>
-                            <constraint firstItem="91t-QI-bo7" firstAttribute="leading" secondItem="jRo-Js-xDR" secondAttribute="leading" constant="268" id="uzi-nD-Yd2"/>
+                            <constraint firstItem="dHc-uE-pLe" firstAttribute="top" secondItem="dDC-Hq-9HZ" secondAttribute="bottom" constant="257" id="2D4-R4-Awn"/>
+                            <constraint firstItem="Imf-Ey-SB3" firstAttribute="top" secondItem="91t-QI-bo7" secondAttribute="top" id="83l-7s-aHF"/>
+                            <constraint firstItem="xWR-yM-mDc" firstAttribute="leading" secondItem="Imf-Ey-SB3" secondAttribute="trailing" constant="13" id="9tZ-yT-Jhp"/>
+                            <constraint firstItem="Imf-Ey-SB3" firstAttribute="leading" secondItem="91t-QI-bo7" secondAttribute="trailing" constant="24" id="ARm-X2-wy1"/>
+                            <constraint firstItem="JmX-7R-HAO" firstAttribute="leading" secondItem="8m5-U6-aYN" secondAttribute="trailing" constant="41" id="Ahm-y4-ThQ"/>
+                            <constraint firstAttribute="trailing" secondItem="xWR-yM-mDc" secondAttribute="trailing" constant="20" symbolic="YES" id="D3e-Df-0je"/>
+                            <constraint firstItem="JmX-7R-HAO" firstAttribute="baseline" secondItem="91t-QI-bo7" secondAttribute="baseline" id="FSW-c8-5l9"/>
+                            <constraint firstItem="JmX-7R-HAO" firstAttribute="centerY" secondItem="dDC-Hq-9HZ" secondAttribute="centerY" id="GC7-fe-tQT"/>
+                            <constraint firstItem="JmX-7R-HAO" firstAttribute="top" secondItem="h5i-Bp-Cdx" secondAttribute="bottom" constant="32" id="Gi9-ed-IZM"/>
+                            <constraint firstItem="JmX-7R-HAO" firstAttribute="baseline" secondItem="8m5-U6-aYN" secondAttribute="baseline" id="Laz-rH-DpN"/>
+                            <constraint firstItem="dDC-Hq-9HZ" firstAttribute="leading" secondItem="8m5-U6-aYN" secondAttribute="trailing" constant="2" id="NEs-fG-Qxe"/>
+                            <constraint firstItem="8m5-U6-aYN" firstAttribute="top" secondItem="xWR-yM-mDc" secondAttribute="top" id="RBE-To-zr6"/>
+                            <constraint firstItem="8m5-U6-aYN" firstAttribute="leading" secondItem="jRo-Js-xDR" secondAttribute="leading" constant="20" symbolic="YES" id="aqB-Th-C5P"/>
+                            <constraint firstItem="91t-QI-bo7" firstAttribute="top" secondItem="JmX-7R-HAO" secondAttribute="top" id="bBu-eY-Qsb"/>
+                            <constraint firstItem="8m5-U6-aYN" firstAttribute="top" secondItem="jRo-Js-xDR" secondAttribute="top" constant="20" symbolic="YES" id="euY-6t-Itc"/>
+                            <constraint firstItem="dHc-uE-pLe" firstAttribute="top" secondItem="8m5-U6-aYN" secondAttribute="bottom" constant="251" id="fR2-p2-HJD"/>
+                            <constraint firstItem="Imf-Ey-SB3" firstAttribute="baseline" secondItem="91t-QI-bo7" secondAttribute="baseline" id="gjP-CC-asl"/>
+                            <constraint firstItem="91t-QI-bo7" firstAttribute="leading" secondItem="JmX-7R-HAO" secondAttribute="trailing" constant="46" id="jP8-pk-YIn"/>
+                            <constraint firstItem="dDC-Hq-9HZ" firstAttribute="top" secondItem="h5i-Bp-Cdx" secondAttribute="bottom" constant="22" id="k8v-3g-4h3"/>
+                            <constraint firstItem="dHc-uE-pLe" firstAttribute="top" secondItem="xWR-yM-mDc" secondAttribute="bottom" constant="248" id="sbz-de-vBt"/>
+                            <constraint firstItem="hT0-9E-Cfm" firstAttribute="top" secondItem="jRo-Js-xDR" secondAttribute="top" id="tIF-ro-OEL"/>
+                            <constraint firstAttribute="trailing" secondItem="hT0-9E-Cfm" secondAttribute="trailing" id="tKu-Jv-dxw"/>
+                            <constraint firstAttribute="bottom" secondItem="hT0-9E-Cfm" secondAttribute="bottom" id="vPO-QH-IPQ"/>
+                            <constraint firstItem="hT0-9E-Cfm" firstAttribute="leading" secondItem="jRo-Js-xDR" secondAttribute="leading" id="wBA-1h-uWq"/>
+                            <constraint firstAttribute="trailing" secondItem="dDC-Hq-9HZ" secondAttribute="trailing" constant="23" id="wdM-P4-Wlm"/>
                         </constraints>
                         <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     </view>
