--- a/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
+++ b/SMLRcam/SMLRcam/en.lproj/MainStoryboard.storyboard
@@ -504,12 +504,13 @@
             </objects>
             <point key="canvasLocation" x="1336" y="56"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Flux Natigation View Controller-->
         <scene sceneID="eut-rm-gfx">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="TJg-hI-cnC" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="TJg-hI-cnC" customClass="FluxNatigationViewController" sceneMemberID="viewController">
                     <toolbarItems/>
                     <nil key="simulatedTopBarMetrics"/>
+                    <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="YxK-yr-g0s">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -798,11 +799,11 @@
                     <nil key="simulatedTopBarMetrics"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
-                        <outlet property="currentDateLbl" destination="91t-QI-bo7" id="VN2-Vu-9YU"/>
-                        <outlet property="currentLocalityLbl" destination="JmX-7R-HAO" id="Nvy-oc-CST"/>
-                        <outlet property="detailBtn" destination="xWR-yM-mDc" id="CuR-68-WVh"/>
-                        <outlet property="exitMapBtn" destination="8m5-U6-aYN" id="uXu-Y1-Ds6"/>
                         <outlet property="myMapView" destination="hT0-9E-Cfm" id="jNM-cI-FMA"/>
+                        <outlet property="statusBarExitMapBtn" destination="8m5-U6-aYN" id="Kyq-PK-K4F"/>
+                        <outlet property="statusBarcurrentDateLbl" destination="91t-QI-bo7" id="eSy-YO-wQY"/>
+                        <outlet property="statusBarcurrentLocalityLbl" destination="JmX-7R-HAO" id="yAg-sr-BnV"/>
+                        <outlet property="statusBardetailBtn" destination="xWR-yM-mDc" id="n3E-AX-lbp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="t8M-tD-94Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
